# VINS-MONO-ROS2

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.arm64.yaml  compose.yaml
ar_demo/: CMakeLists.txt  package.xml
ar_demo/src/: ar_demo_node.cpp
benchmark_publisher/: CMakeLists.txt  package.xml
camera_model/: CMakeLists.txt  package.xml
camera_model/src/calib/: CameraCalibration.cc
camera_model/src/gpl/: EigenQuaternionParameterization.cc
config_pkg/: CMakeLists.txt  package.xml
config_pkg/config/euroc/: euroc_config.yaml
dataset/iVIN_v0/1/: .dockerignore
docker/: bash_env.sh  entrypoint.sh
docker/compatibility/: CMakeLists.txt  COLCON_IGNORE
docs/: DEVELOPMENT_STANDARDS_UK.md  DOCKER_UK.md  LOGGING_UK.md  README_UK.md
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/launch/: vins_feature_tracker_rviz.launch.py  vins_rviz.launch.py
feature_tracker/src/: feature_tracker_node.cpp
pose_graph/: CMakeLists.txt  package.xml
pose_graph/src/: pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
tools/: build-arm64-deb.ps1
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: euroc.launch.py
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.h  parameters.cpp  parameters.h  version.h.in
vins_estimator/src/factor/: marginalization_factor.cpp  pose_local_parameterization.cpp  pose_local_parameterization.h
vins_estimator/src/initial/: initial_sfm.cpp
vins_estimator/src/utility/: ceres_logging.h  visualization.cpp  visualization.h
(+1 files in other folders)
